--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>欢迎进入注册界面</title>
     <link rel="stylesheet" href="./css/register.css">
 </head>
-
+<!--测试同步gitee-->
 <body>
     <div class="outer_box">
         <div class="backImg"></div>
